# flowmode

./: .gitignore  CHANGELOG.md  Cargo.toml  DISTRIBUTION_README.md  NIRCMD_LICENSE.txt  README.md  build.rs  config.toml  log.csv  output.txt
.claude/: settings.local.json
src/: lib.rs  main.rs
tests/: integration_tests.rs  unit_tests.rs
