[package]
name = "flow_mode"
version = "1.0.0"
edition = "2021"
authors = ["Flow Mode Team"]
description = "A CLI tool to help you focus by blocking distractions and managing Pomodoro sessions"
license = "MIT"
repository = "https://github.com/cliworld/flowmode"
keywords = ["productivity", "focus", "pomodoro", "cli", "blocking"]
categories = ["command-line-utilities"]

[[bin]]
name = "flowmode"
path = "src/main.rs"

[lib]
name = "flowmode"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
notify = "5.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
humantime = "2.1"
sysinfo = "0.31.0"
chrono = "0.4.38"
dns-lookup = "2.0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"